Fix contact form btn alignment issue

--- a/css/main.css
+++ b/css/main.css
@@ -196,6 +196,7 @@ img.logo {
 	box-shadow:none;
 	transition:none;
 	font-size: 15px;
+   font-family: Helvetica, Sans-Serif;
 }
 .with-errors {
    color:red;
@@ -206,12 +207,10 @@ img.logo {
    width:100%;
    float:right;
 }
+.btn-primary {
+   font-family: Helvetica, Sans-Serif;
+}
 .contact-jumbotron p {font-size: 16px}
-
-input[name="name"] { padding-top:11px;}
-input[name="email"] { padding-top:11px;}
-input[name="phone"] { padding-top:11px;}
-textarea.form-control {padding-top:10px;}
 
 .contact-container .btn-primary {
 	background-color: var(--main-pink);
@@ -219,7 +218,7 @@ textarea.form-control {padding-top:10px;}
 	font-size:18px;
 	height:40px;
 	width:100%;
-   padding-top:11px;
+   padding-top:9px;
 }
 .contact-container .btn-primary:active {background-color: var(--main-pink);box-shadow:none;}
 
